--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Madhavikutty</title>
+  </head>
+  <body>
+    <h1>KAMALA SURAIYYA</h1>
+    <p>Kamala Surayya (born Kamala; 31 March 1934–31 May 2009),
+      popularly known by her one-time pen name Madhavikutty and married name Kamala Das, was an Indian poet in English as
+      well as an author in Malayalam from Kerala, India. Her popularity in Kerala is based chiefly on her short stories and
+      autobiography, while her oeuvre (works) in English, written under the name Kamala Das, is noted for the poems and
+      explicit autobiography. She was also a widely read columnist and wrote on diverse topics including women's issues, child care,
+      politics among others etc. Her liberal treatment of female sexuality, marked her as an iconoclast in popular culture of her
+      generation.[1] On 31 May 2009 , aged 75, she died at a hospital in Pune.[2]
+    </p>
+    <p>Kamala Das was born in Punnayurkulam, Ponnani taluk, Malabar District, British India (present-day Thrissur district, Kerala,
+      India) on 31 March 1934, to V. M. Nair, a managing editor of the widely circulated Malayalam daily Mathrubhumi, and Nalapat
+      Balamani Amma, a renowned Malayali poet. </p>
+    <p>She was noted for her many Malayalam short stories as well as many poems written in English.
+      Das was also a syndicated columnist. She once claimed that "poetry does not sell in this country [India]",but her
+      forthright columns, which sounded off on everything from women's issues and child care to politics, were popular.
+      Kamala Das was a confessional poet whose poems have often been considered at par with those of Anne Sexton and Robert Lowell.
+      At the age of 42, she published a daring autobiography, My Story; it was originally written in Malayalam (titled Ente Katha) and
+      later she translated it into English. Later she admitted that much of the autobiography had fictional elements.
+    </p>
+    <p>
+      Kamala Das is essentially known for her bold and frank expression.
+      The prominent features of her poetry are an acute obsession with love and the use of confession.
+      The main theme of her poetry is based upon freedom, love and protection. She wrote on a diverse range of topics,
+      often disparate- from the story of a poor old servant, about the sexual disposition of upper-middle-class women living near a
+      metropolitan city or in the middle of the ghetto. Some of her better-known stories include Pakshiyude Manam, Neypayasam,
+      Thanuppu, and Chandana Marangal. She wrote a few novels, out of which Neermathalam Pootha Kalam, which was received favourably
+      by the reading public as well as the critics, stands out. She has also held positions as Vice-chairperson in Kerala Sahitya
+      Akademi, chairperson in Kerala Forestry Board, President of the Kerala Children's Film Society, editor of Poet magazine and
+      Poetry editor of Illustrated Weekly of India. 
+    </p>
+    </body>
+</html>
 
