--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>KAMALA SURAIYYA</h1>
+    <div style="text-align:center"><img src="image.jpg" width="40%"/></div>
     <p>Kamala Surayya (born Kamala; 31 March 1934–31 May 2009),
       popularly known by her one-time pen name Madhavikutty and married name Kamala Das, was an Indian poet in English as
       well as an author in Malayalam from Kerala, India. Her popularity in Kerala is based chiefly on her short stories and
