--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       by the reading public as well as the critics, stands out. She has also held positions as Vice-chairperson in Kerala Sahitya
       Akademi, chairperson in Kerala Forestry Board, President of the Kerala Children's Film Society, editor of Poet magazine and
       Poetry editor of Illustrated Weekly of India. 
-    </p>
+    </p><br />
+    <ul style="list-style-type:disc;">
+      <li 
     </body>
 </html>
 
