--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       Poetry editor of Illustrated Weekly of India. 
     </p><br />
     <ul style="list-style-type:disc;">
-      <li 
+      <li><a href="awards.html" target="_blank">Awards</a></li>
     </body>
 </html>
 
