--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </p><br />
     <ul style="list-style-type:disc;">
       <li><a href="awards.html" target="_blank">Awards</a></li>
+      <li><a href="table.html" target="_blank">Books</a></li>
     </body>
 </html>
 
