--- a/table.html
+++ b/table.html
@@ -12,7 +12,7 @@
 
       <tr>
         <td>Summer in Calcutta</td>
-        <td>Naricheerukal Parakkumbol (</td>
+        <td>Naricheerukal Parakkumbol </td>
       </tr>
 
       <tr>
