--- a/table.html
+++ b/table.html
@@ -4,12 +4,13 @@
   <title>BOOKS</title>
   </head>
   <body>
-    <table>
+    <table border="1" cellpadding="10">
+      <thead>
       <tr>
         <th rowspan="2"> ENGLISH </th>
         <th rowspan="2"> MALAYALAM </th>
       </tr>
-
+    </thead>
       <tr>
         <td>Summer in Calcutta</td>
         <td>Naricheerukal Parakkumbol </td>
