--- a/form.html
+++ b/form.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>FORM</title>
+  </head>
+  <body>
+    <h2>TO KNOW MORE ABOUT MADHAVIKUTTY</h2>
+    <h3> FILL THE FORM BELOW</h3> <br /><br /><br />
+<form>
+    NAME : <input type="text" placeholder="Enter your name" maxlength="20" /> <br /><br />
+    GENDER :
+  Male: <input type= "radio" name="GENDER" value="male" />
+    Female: <input type= "radio" name="GENDER" value="female" />
+      Others: <input type= "radio" name="GENDER" value="others" />
+       <br /><br />
+  DATE : <input type="date" min="2000-01-01" /> <br /><br />
+   STATE:
+       <select>
+         <option>Kerala</option>
+          <option>Karnataka</option>
+           <option>Andhra Pradesh</option>
+            <option>Goa</option>
+             <option>Tamilnadu</option>
 
+              </select>
+              <br /><br />
+  DISTRICT :
+        Kasargod : <input type="checkbox" value= "kasargod" />
+        Kannur : <input type="checkbox" value= "kannur" />
+        malapuram : <input type="checkbox" value= "malapuram" />
+        Idukki : <input type="checkbox" value= "idukki" />
+
+
+</form>
+<br /><br />
+<br /><br />
+
+  THANK YOU ...VISIT AGAIN....
+    </body>
+</html>
