--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
       <li><a href="awards.html" target="_blank">Awards</a></li>
       <li><a href="table.html" target="_blank">Books</a></li>
       
-     <button type="button">
-       Click Here
-      </button>
+      <a> href="form.html" target="_blank">FOR MORE DETAILS</a>
       
     </body>
 </html>
