--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
       <li><a href="awards.html" target="_blank">Awards</a></li>
       <li><a href="table.html" target="_blank">Books</a></li>
       
-      <a> href="form.html" target="_blank">FOR MORE DETAILS</a>
+      <a href="form.html" target="_blank">FOR MORE DETAILS >
+      <button type="button">
+       Click Here
+      </button>
+      </a>
       
     </body>
 </html>
