--- a/table.html
+++ b/table.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>BOOKS</title>
+  <link rel="stylesheet" type=text/css" href="sample.css" />
   </head>
   <body>
     <table border="1" cellpadding="10">
