--- a/table.html
+++ b/table.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type=text/css" href="sample.css" />
   </head>
   <body>
+    <h2>BOOKS</h2>                                                     
     <table border="1" cellpadding="10">
       <thead>
       <tr>
