--- a/table.html
+++ b/table.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>BOOKS</title>
-  <link rel="stylesheet" type=text/css href="sample.css" />
+  <link rel="stylesheet" type="text/css" href="sample.css" />
   </head>
   <body>
     <h2>BOOKS</h2>                                                     
