--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Madhavikutty</title>
+  <link rel="stylesheet" type="text/css" href="sample.css"
   </head>
   <body>
     <h1>KAMALA SURAIYYA</h1>
