--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p><br />
     <ul style="list-style-type:disc;">
       <li><a href="awards.html" target="_blank">Awards</a></li>
-      <li><a href="table.html" target="_blank">Books</a></li>
+      <li><a href="table.html" target="_blank">Books</a></li><br />
       
       <a href="form.html" target="_blank">FOR MORE DETAILS 
       </a>
