--- a/form.html
+++ b/form.html
@@ -24,11 +24,21 @@
 
               </select>
               <br /><br />
-  DISTRICT :
-        Kasargod : <input type="checkbox" value= "kasargod" />
-        Kannur : <input type="checkbox" value= "kannur" />
-        malapuram : <input type="checkbox" value= "malapuram" />
-        Idukki : <input type="checkbox" value= "idukki" />
+   Districts:
+        <input type="text" list="districts">
+        <datalist id="districts">
+        <option value="Kasaragod"/>
+        <option value="Kannur"/>
+        <option value="Wayanadu"/>
+        <option value="Kozhikode"/>
+        <option value="Malappuram"/>
+        <option value="Palakkad"/>
+      </datalist><br /><br />
+
+  Languages Known:
+        Malayalam: <input type="checkbox" value="mal" checked />
+        English: <input type="checkbox" value="eng" checked />
+        Hindi: <input type="checkbox" value="hin" /><br /><br />
 
 
 </form>
