--- a/form.html
+++ b/form.html
@@ -39,6 +39,8 @@
         Malayalam: <input type="checkbox" value="mal" checked />
         English: <input type="checkbox" value="eng" checked />
         Hindi: <input type="checkbox" value="hin" /><br /><br />
+  <button type="submit">Submit</button>
+    <button type="reset">Reset</button>
 
 
 </form>
